--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/router": "^15.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "chart.js": "^4.4.9",
+    "chartjs-adapter-luxon": "^1.3.1",
+    "chartjs-chart-financial": "^0.2.1",
+    "luxon": "^3.6.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.0",
@@ -35,6 +39,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "@types/chart.js": "^2.9.41",
+    "@types/luxon": "^3.6.2"
   }
 }
